; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_misc.c_set_auth_token.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_misc.c_set_auth_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_pass = type { i32, i8*, i8* }

@USER_PASS_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_auth_token(%struct.user_pass* %0, %struct.user_pass* %1, i8* %2) #0 {
  %4 = alloca %struct.user_pass*, align 8
  %5 = alloca %struct.user_pass*, align 8
  %6 = alloca i8*, align 8
  store %struct.user_pass* %0, %struct.user_pass** %4, align 8
  store %struct.user_pass* %1, %struct.user_pass** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %38

9:                                                ; preds = %3
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %38

13:                                               ; preds = %9
  %14 = load %struct.user_pass*, %struct.user_pass** %4, align 8
  %15 = icmp ne %struct.user_pass* %14, null
  br i1 %15, label %16, label %38

16:                                               ; preds = %13
  %17 = load %struct.user_pass*, %struct.user_pass** %4, align 8
  %18 = getelementptr inbounds %struct.user_pass, %struct.user_pass* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %38

21:                                               ; preds = %16
  %22 = load %struct.user_pass*, %struct.user_pass** %5, align 8
  %23 = getelementptr inbounds %struct.user_pass, %struct.user_pass* %22, i32 0, i32 1
  %24 = load i8*, i8** %23, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = load i32, i32* @USER_PASS_LEN, align 4
  %27 = call i32 @strncpynt(i8* %24, i8* %25, i32 %26)
  %28 = load %struct.user_pass*, %struct.user_pass** %5, align 8
  %29 = getelementptr inbounds %struct.user_pass, %struct.user_pass* %28, i32 0, i32 2
  %30 = load i8*, i8** %29, align 8
  %31 = load %struct.user_pass*, %struct.user_pass** %4, align 8
  %32 = getelementptr inbounds %struct.user_pass, %struct.user_pass* %31, i32 0, i32 2
  %33 = load i8*, i8** %32, align 8
  %34 = load i32, i32* @USER_PASS_LEN, align 4
  %35 = call i32 @strncpynt(i8* %30, i8* %33, i32 %34)
  %36 = load %struct.user_pass*, %struct.user_pass** %5, align 8
  %37 = getelementptr inbounds %struct.user_pass, %struct.user_pass* %36, i32 0, i32 0
  store i32 1, i32* %37, align 8
  br label %38

38:                                               ; preds = %21, %16, %13, %9, %3
  %39 = load %struct.user_pass*, %struct.user_pass** %4, align 8
  %40 = call i32 @purge_user_pass(%struct.user_pass* %39, i32 0)
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @strncpynt(i8*, i8*, i32) #1

declare dso_local i32 @purge_user_pass(%struct.user_pass*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
